ansible/roles/kubernetes-jenkins/files/service.yml
apiVersion: v1
kind: Service
metadata:
  name: jenkins-service 
  namespace: jenkins
  labels:
    app: jenkins
spec:
  selector:
    app: jenkins
  type: ClusterIP
  ports:
  - name: jenkins-service
    protocol: TCP
    port: 8080
    targetPort: jenkins-port
